return track groups in API
